# movie-simpy

./: main.py  pyproject.toml  simulate.py
