[tool.poetry]
name = "sim-pile"
version = "0.1.0"
description = ""
authors = ["Bruce W. Lowther <bwlowther@micron.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12.0"
simpy = "^4.1.1"
pydantic = "^2.9.1"
pandas = "^2.2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
numpy = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

